--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,8 @@ body{
     height: 97vh;
     align-items: center;
     justify-content: center;
+    background-size: cover;
+    background-position: center;
 }
 
 /* greetings */
